2005-04-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: forgot to add a define for apache 1.3 with the
	equivalent apr_table_addn.

2005-04-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: don't overwrite headers already set. Fixes bug #74507.

2005-04-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: add CGI and other variables to the request.

2005-03-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* man/mod_mono.8.in: documented MonoSetEnv.

2005-03-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: added MonoSetEnv directive. From a patch by Joel
	Reed to 1.0.6.

2005-03-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: try to connect to mod-mono-server before forking.
	Patch by Rob Lyon.

2005-03-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.0.6.99.
	* src/mod_mono.c: patch from Rob Lyon that fixes unix socket deletion
	when the default name is used.

2005-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: some small changes that make this work on amd64.
	Thanks to Mike Morano.

2005-02-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: make the new 'several mod-mono-server' schema work
	when directives are inside <virtualhost>.

2005-02-16 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: prevent execution of 'init' twice (parent and child)
	under apache 1.3.
	* src/mod_mono.h: added extern declaration for 2 apache 1.3 variables.

2005-02-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: removed <apr_env.h>.

2005-02-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: SERVER_PORT_SECURE returns true if we're https. Part
	of the fix for bug #71680.

2005-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* man/mod_mono.8.in: updated.

2005-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: no ranlib.
