@@ -63,6 +63,8 @@ as possible to Apache 2 module, reducing ifdefs in the code itself*/
 #endif
 
 #include "multithread.h"
+
+#define apr_uri_t uri_components
 #define apr_pool_t ap_pool
 #define apr_pcalloc_t ap_pcalloc_t
 #define apr_pcalloc ap_pcalloc
